intro file-template-api
add file path reference